media/Jackett/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:arm64v8-latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          hostPort: 9117
          protocol: TCP
          containerPort: 9117
        volumeMounts:
          - mountPath: /config
            name: jackett-config
      volumes:
        - name: jackett-config
          hostPath:
            path: /media/config/jackett
