media/Jackett/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    app: jackett
  ports:
  - name: default
    port: 80
    targetPort: 9117
